Revert "Merge remote-tracking branch 'upstream/develop' into cvt-bg-threads"
This reverts commit 1c40c1071a48f693d5d60148b648b0c230314b66, reversing
changes made to 61a35d8e1f13bd6a8622ae6ce1b5f904c2eb4742.